# wire

./: .editorconfig  CHANGELOG.md  Cargo.toml  README.md  action.yml  flake.nix  jobsets.nix  justfile  spec.json
.github/actions/setup-env/: action.yml
.github/workflows/: build.yml  pages.yml  pr-preview.yml  publish-docs.yml  test-action.yml  test.yml
.hydra/: jobsets.nix  spec.json
doc/: default.nix  package.json  package.nix  pnpm-lock.yaml
doc/.vitepress/: config.ts
doc/.vitepress/theme/: index.ts
doc/guide/: flakes.md  getting-started.md  hive-default.md  keys.md  parallelism.md  targeting.md  wire.md
doc/reference/: errors.md  meta.md
doc/snippets/: default.nix
doc/snippets/getting-started/: cache.nix  configuration.nix  flake-merged.nix  flake.nix  hm.flake.nix  home.nix  nix.conf  nixos.flake.nix
integration-testing/: default.nix
nix/: shells.nix
runtime/: evaluate.nix
tests/: tests.nix
tests/integration/: default.nix  hive.nix  nixpkgs.nix  ssh-keys.nix
tests/nix/: default.nix  test-opts.nix
tests/nix/suite/: utils.nix
tests/nix/suite/test_basic_deploy/: default.nix  hive.nix
tests/nix/suite/test_keys/: default.nix
tests/nix/suite/test_remote_deploy/: default.nix  hive.nix
tests/rust/_keys_should_fail/: hive.nix
tests/rust/no_nixpkgs/: hive.nix
wire/agent/: Cargo.toml  build.rs  default.nix
wire/agent/src/: keys.proto  lib.rs  main.rs
wire/cli/: Cargo.toml  default.nix
wire/cli/src/: apply.rs  cli.rs  main.rs  tracing_setup.rs
wire/key_agent/: Cargo.toml
wire/lib/: Cargo.toml  build.rs
wire/lib/src/: detached_sudo.rs  errors.rs  lib.rs  nix.rs  nix_log.rs  test_support.rs
wire/lib/src/commands/: common.rs  elevated.rs  interactive.rs  mod.rs  nonelevated.rs  noninteractive.rs
wire/lib/src/hive/: key.rs  mod.rs  node.rs
wire/lib/src/hive/steps/: activate.rs  build.rs  evaluate.rs  keys.rs  mod.rs  ping.rs  push.rs
wire/lib/src/hive/steps/keys/: mod.rs  remote.rs
