[workspace]
members = ["wire/key_agent", "wire/lib", "wire/cli"]
resolver = "2"
package.edition = "2021"
package.version = "0.1.0"

[workspace.metadata.crane]
name = "wire"

[workspace.dependencies]
clap = { version = "4.5.9", features = ["derive", "string"] }
clap-verbosity-flag = "2.2.0"
serde = { version = "1.0.204", features = ["derive", "rc"] }
serde_json = { version = "1.0.120" }
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.41"
tracing-indicatif = "0.3.6"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.18"
im = { version = "15.1.0", features = ["serde"] }
anyhow = "1.0.86"
prost = "0.13.2"
