[workspace]
members = ["wire/key_agent", "wire/lib", "wire/cli"]
resolver = "2"
package.edition = "2021"
package.version = "0.2.0"

[workspace.metadata.crane]
name = "wire"

[workspace.dependencies]
clap = { version = "4.5.40", features = ["derive", "string"] }
clap-verbosity-flag = "2.2.3"
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = { version = "1.0.140" }
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-indicatif = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.19"
im = { version = "15.1.0", features = ["serde"] }
anyhow = "1.0.98"
prost = "0.13.5"
