[workspace]
members = ["wire/key_agent", "wire/lib", "wire/cli"]
resolver = "2"
package.edition = "2021"
package.version = "0.5.0"

[workspace.metadata.crane]
name = "wire"

[workspace.dependencies]
clap = { version = "4.5.47", features = ["derive", "string", "cargo"] }
clap-verbosity-flag = "3.0.4"
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = { version = "1.0.143" }
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.20"
im = { version = "15.1.0", features = ["serde"] }
anyhow = "1.0.98"
prost = "0.14.1"
nix = { version = "0.30.1", features = ["user", "poll", "term"] }
miette = { version = "7.6.0", features = ["fancy"] }
thiserror = "2.0.16"
