[package]
name = "wire"
version.workspace = true
edition.workspace = true

[features]
dhat-heap = []

[dependencies]
clap = { workspace = true }
clap-verbosity-flag = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-indicatif = { workspace = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true }
lib = { path = "../lib" }
serde_json = { workspace = true }
anyhow = { workspace = true }
indicatif = "0.17.8"
enum-display-derive = "0.1.1"
im = { workspace = true }
futures = "0.3.30"
clap-num = "1.1.1"
clap-markdown = "0.1.4"
itertools = "0.14.0"
dhat = "0.3.2"
clap_complete = "4.5.40"
