[package]
name = "lib"
version.workspace = true
edition.workspace = true

[features]
no_web_tests = []

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-indicatif = { workspace = true }
tracing-subscriber = { workspace = true }
im = { workspace = true }
serde-query = "0.2.0"
thiserror = "1.0.62"
serde_repr = "0.1.19"
regex = "1.11.1"
derive_more = "0.99.18"
key_agent = { path = "../key_agent" }
futures = "0.3.30"
prost = { workspace = true }
gethostname = "0.5.0"
async-trait = "0.1.84"
