[package]
name = "lib"
version.workspace = true
edition.workspace = true

[features]
no_web_tests = []

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-indicatif = { workspace = true }
tracing-subscriber = { workspace = true }
im = { workspace = true }
serde-query = "0.2.0"
thiserror = "2.0.12"
serde_repr = "0.1.20"
regex = "1.11.1"
derive_more = "0.99.18"
key_agent = { path = "../key_agent" }
futures = "0.3.31"
prost = { workspace = true }
gethostname = "1.0.2"
async-trait = "0.1.88"
