[package]
name = "lib"
version.workspace = true
edition.workspace = true

[features]
no_web_tests = []

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
im = { workspace = true }
serde-query = "0.2.0"
thiserror = "2.0.16"
serde_repr = "0.1.20"
regex = "1.11.2"
derive_more = { version = "2.0.1", features = ["display"] }
key_agent = { path = "../key_agent" }
futures = "0.3.31"
prost = { workspace = true }
gethostname = "1.0.2"
async-trait = "0.1.88"
nix.workspace = true
miette = { workspace = true }
rand = "0.9.2"
tokio-util = "0.7.16"
portable-pty = "0.9.0"
anyhow.workspace = true
itertools = "0.14.0"

[dev-dependencies]
tempdir = "0.3"
visibility = "0.1.1"

[build-dependencies]
miette = { workspace = true }
syn = "2.0.106"
proc-macro2 = "1.0.101"
itertools = "0.14.0"
